tooling/tree-sitter-stilts/test/corpus/base.txt
=========
Base Test
=========

<!DOCTYPE html>
<html>
    {% block html %}
    {% end %}
    <head>
        {% block head %}
            i have stuff
        {% end %}
    </head>
    <body>
        <header>{% block header %}{% end %}</header>
        <main>{% block main %}{% end %}</main>
        <footer>{% block footer %}{% end %}</footer>
    </body>
</html>

---

(source_file
  (text)
  (expr (expr_content))
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (expr (expr_content))
  (text))
