tooling/tree-sitter-stilts/test/corpus/teams.txt
==========
Teams Test
==========

<html>
  <head>
    <title>{% year %}</title>
  </head>
  <body>
    <h1>CSL {% year %}</h1>
    <ul>
    {% for (i, team) in teams.iter().enumerate() %}
      <li class="{% if i == 0 %}champion{% end %}">
      <b>{% team.name %}</b>: {% team.score %}
      </li>
    {% end %}
    </ul>
  </body>
</html>

---

(source_file
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text)
  (expr (expr_content))
  (text))

